Document EVAL a bit

--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -1207,12 +1207,34 @@ Coerces the invocant to L<IO::Path>.
 
     .say for '.'.IO.dir;        # gives a directory listing
 
+=head2 routine EVAL
+
+Defined as:
+
+    sub EVAL(Cool $code, :$lang = { ... })
+
+Usage:
+
+    EVAL "say 'hello'";
+
+Coerces the invocant to L<Str>.
+
+This works as-is with a literal string parameter. If you have a more complex
+input, such as a variable or string with embedded code, you must enable the
+C<MONKEY-SEE-NO-EVAL> pragma:
+
+    use MONKEY-SEE-NO-EVAL;
+    EVAL "say { 5 + 5 }";
+
+C<EVAL> is also a gateway for executing code in other languages:
+
+    EVAL "use v5.20; say 'Hello from perl5!'", :lang<Perl5>;
+
 =begin comment
 
 TODO: sech, asech, cosech, acosech, cotanh, acotanh, cis,
 unpolar, fmt, substr-rw, trans,
-match, subst, sprintf, printf, samecase,
-EVAL
+match, subst, sprintf, printf, samecase
 
 =end comment
 
