Add a bunch of testing subs to the search index

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -53,7 +53,7 @@ where one specifies C<perl6> as the executable to run the tests:
 
 =head1 Test plans
 
-=item plan($count)
+=item X<plan($count)|plan>
 
 Specify the total number of tests. Usually written at the beginning of a
 test file.
@@ -66,7 +66,7 @@ the subtest.
 If a C<plan> is used, it is not necessary to denote the end of testing with
 C<done-testing>.
 
-=item done-testing
+=item X<done-testing>
 
 Specify that testing has finished.  Use this function when you do not as yet
 have a C<plan> for the number of tests to run.  A C<plan> is thus not
@@ -82,7 +82,7 @@ you want to unit-test.
 
 =head2 By truthiness
 
-=item ok($value, $description?), nok($condition, $description?)
+=item X<ok($value, $description?), nok($condition, $description?)|ok,nok>
 
 The C<ok> function marks a test as passed if the given C<$value>
 evaluates to C<True> in a boolean context. The C<nok> function marks
@@ -103,7 +103,7 @@ case the comparison fails.
 
 =head2 By string comparison
 
-=item is($value, $expected, $description?)
+=item X<is($value, $expected, $description?)|is>
 
 Marks a test as passed if C<$value> and C<$expected> compare positively with
 the L<eq operator|/routine/eq>. The function accepts an optional
@@ -118,7 +118,7 @@ C<===> operator instead:
     my Int $a;
     is $a, Int, 'The variable $a is an unassigned Int';
 
-=item isnt($value, $expected, $description?)
+=item X<isnt($value, $expected, $description?)|isnt>
 
 Marks a test as passed if C<$value> and C<$expected> are B<not> equal using
 the same rules as C<is()>.  The function accepts an optional C<$description>
@@ -132,7 +132,7 @@ of the test.
 
 =head2 By approximate numeric comparison
 
-=item is-approx($value, $expected, $description?)
+=item X<is-approx($value, $expected, $description?)|is-approx>
 
 Marks a test as passed if the C<$value> and C<$expected> numerical values
 are within C<1e-5> of each other.  The function accepts an optional
@@ -143,7 +143,7 @@ C<$description> of the test.
 
 =head2 By structural comparison
 
-=item is-deeply($value, $expected, $description?)
+=item X<is-deeply($value, $expected, $description?)|is-deeply>
 
 Marks a test as passed if C<$value> and C<$expected> compare positively with
 the L<eqv operator|/routine/eq>. This is the best way to check for equality of
@@ -174,7 +174,7 @@ not sorted, and converting a L<Hash|/type/Hash> to a string loses information.
 
 =head2 By arbitrary comparison
 
-=item cmp-ok($value, $comparison, $expected, $description?)
+=item X<cmp-ok($value, $comparison, $expected, $description?)|cmp-ok>
 
 Compares C<$value> and C<$expected> with the given C<$comparison> operator and
 passes the test if the comparison yields a C<True> value.  For ease of use,
@@ -185,7 +185,7 @@ accepts an optional C<$description> of the test.
 
 =head2 By object type
 
-=item isa-ok($value, $expected-type, $description?)
+=item X<isa-ok($value, $expected-type, $description?)|isa-ok>
 
 Marks a test as passed if the given object C<$value> is, or inherits from, the
 given C<$expected-type>.  For convenience, types may also be specified as a
@@ -200,7 +200,7 @@ string.  The function accepts an optional C<$description> of the test.
 
 =head2 By regex
 
-=item like($value, $expected-regex, $description?)
+=item X<like($value, $expected-regex, $description?)|like>
 
     like 'foo', /fo/, 'foo looks like fo';
 
@@ -208,7 +208,7 @@ Marks a test as passed if the C<$value>, when coerced to a string, matches the
 C<$expected-regex>.  The function accepts an optional C<$description> of the
 test.
 
-=item unlike($value, $expected-regex, $description?)
+=item X<unlike($value, $expected-regex, $description?)|unlike>
 
     unlike 'foo', /bar/, 'foo does not look like bar';
 
@@ -218,7 +218,7 @@ of the test.
 
 =head1 Testing modules
 
-=item use-ok($module)
+=item X<use-ok($module)|use-ok>
 
 Marks a test as passed if the given C<$module> is correctly loaded.
 
@@ -226,7 +226,7 @@ Marks a test as passed if the given C<$module> is correctly loaded.
 
 =head1 Testing exceptions
 
-=item dies-ok($code, $description?)
+=item X<dies-ok($code, $description?)|dies-ok>
 
 Marks a test as passed if the given C<$code> throws an exception.
 
@@ -240,7 +240,7 @@ sub saruman(Bool :$ents-destroy-isengard) {
 dies-ok { saruman(ents-destroy-isengard => True) }, "Saruman dies";
 =end code
 
-=item lives-ok($code, $description?)
+=item X<lives-ok($code, $description?)|lives-ok>
 
 Marks a test as passed if the given C<$code> B<does not> throw an
 exception.
@@ -255,7 +255,7 @@ sub frodo(Bool :$destroys-ring) {
 lives-ok { frodo(destroys-ring => True) }, "Frodo survivies";
 =end code
 
-=item eval-dies-ok($string, $description?)
+=item X<eval-dies-ok($string, $description?)|eval-dies-ok>
 
 Marks a test as passed if the given C<$string> throws an exception when
 C<eval>ed as code.
@@ -268,7 +268,7 @@ eval-dies-ok q[my $joffrey = "nasty";
     "Ned Stark dies";
 =end code
 
-=item eval-lives-ok($string, $description?)
+=item X<eval-lives-ok($string, $description?)|eval-lives-ok>
 
 Marks a test as passed if the given C<$string> B<does not> throw an
 exception when C<eval>ed as code.
@@ -281,7 +281,7 @@ eval-lives-ok q[my $daenerys-burns = False;
     "Dany is blood of the dragon";
 =end code
 
-=item throws-like($code, $expected-exception, $description?)
+=item X<throws-like($code, $expected-exception, $description?)|throws-like>
 
 Marks a test as passed if the given C<$code> throws the specific exception
 C<$expected-exception>. The code C<$code> may be specified as something
@@ -307,7 +307,7 @@ your string with a block and an EVAL.  For instance:
 
 The result of a group of subtests is only C<ok> if all subtests are C<ok>.
 
-=item subtest(&subtests, $description?)
+=item X<subtest(&subtests, $description?)|subtest>
 
 The C<subtest> function executes the given block, consisting of usually more
 than one test, possibly including a C<plan> or C<done>.  It will pass the
@@ -339,7 +339,7 @@ not yet be implemented, in which case tests can be marked as C<todo>.  Or it
 could be the case that a given feature only works on a particular platform -
 in which case one would C<skip> the test on other platforms.
 
-=item todo($reason, $count = 1)
+=item X<todo($reason, $count = 1)|todo>
 
 Mark C<$count> tests as TODO, giving a C<$reason> as to why.  By default
 only one test will be marked TODO.
@@ -350,7 +350,7 @@ only one test will be marked TODO.
     is my-custom-pi(), pi, 'my-custom-pi'; # Tun the test, but don't report
                                            # failure in test harness.
 
-=item skip($reason, $count = 1)
+=item X<skip($reason, $count = 1)|skip>
 
 Skip C<$count> tests, giving a C<$reason> as to why.  By default only one
 test will be skipped.  Use such functionality when a test (or tests) would
@@ -366,7 +366,7 @@ else {
 }
 =end code
 
-=item skip-rest($reason?)
+=item X<skip-rest($reason?)|skip-rest>
 
 Skip the remaining tests.  If the remainder of the tests in the test file
 would all fail due to some condition, use this function to skip them,
@@ -394,7 +394,7 @@ If the convenience functionality documented above does not suit your needs,
 you can instead use the following functions to direct the test harness
 output manually.
 
-=item pass($description?), flunk($description?)
+=item X<pass($description?), flunk($description?)|pass>
 
 The C<pass> function marks a test as passed.  C<flunk> marks a test as
 B<not> passed.  Both functions accept an optional test C<$description>.
@@ -407,7 +407,7 @@ As the Perl 5 documentation for C<Test::More> notes, such constructs are
 used when one has a complicated test condition.  As such, they should be
 used very, very sparingly.
 
-=item diag($message);
+=item X<diag($message)|diag>
 
 Display diagnostic information in a TAP-compatible manner on the standard
 error stream.  It is usually used when a particular test has failed to
