Remove last reference to first-index

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -234,8 +234,8 @@ variable holding a code object as an argument:
     &first_index($coderef, @values); # (disabling the prototype that parses a
                                      # literal block as the first argument)
     # Perl 6:
-    first-index { $_ > 5 }, @values;
-    first-index $coderef, @values;
+    first { $_ > 5 }, @values, :k;   # the :k makes first return an index
+    first $coderef, @values, :k;
 =end item
 
 =begin item
