--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -6,6 +6,8 @@
 
 =head1 Getting Started
 
+X<|nativecall>
+
 The simplest imaginable use of NativeCall would look something like this:
 
     use NativeCall;
