Document :{ ... } hash literal syntax

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -389,6 +389,11 @@ When assigning to a C<%> sigil variable, the curly braces are optional.
 
     my %ages = fred => 23, jean => 87, ann => 4;
 
+Because C<{ }> is also used for blocks, you can force Hash literal context by
+prefixing it with a C<:> like:
+
+    my %when = :{ (now) => "Instant", (DateTime.now) => "DateTime" };
+
 =head3 Regex literals
 
 A L<Regex|/type/Regex> is declared with slashes like C</foo/>. Note that this C<//> syntax is shorthand for the full C<rx//> syntax.
