--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -53,6 +53,15 @@ occurrence is stored in the hash:
     my %h = a => 1, a => 2;
     say %h<a>;                  # 2
 
+To assign to a variable without the C<%> sigil, you may use curly braces:
+
+    my $h = { a => 1, b => 2 };
+
+Because C<{ }> is also used to denote blocks, you may prefix it with a colon
+(X<:{ ... }|:{ }>) to force hash literal context:
+
+    my $when = :{ (now) => "Instant", (DateTime.now) => "DateTime" };
+
 =head1 Looping over hash keys and values
 
 A common idiom for processing the elements in a hash is to loop over the
