Add the new UDP related methods

--- a/Type/IO/Socket/Async.pod
+++ b/Type/IO/Socket/Async.pod
@@ -46,10 +46,35 @@ await IO::Socket::Async.connect('localhost',3333).then( -> $p {
 });
 =end code
 
+Alternatively L<IO::Socket::Async> can send and receive UDP messages. 
+An example server that outputs all the data it receives would be:
+
+=begin code
+my $socket = IO::Socket::Async.bind-udp('localhost', 3333);
+
+react {
+    whenever $socket.Supply -> $v {
+        if $v.chars > 0 {
+            say $v;
+        }
+    }
+}
+=end code
+
+And an associated client might be:
+
+=begin code
+
+my $socket = IO::Socket::Async.udp();
+await $socket.print-to('localhost', 3333,"Hello, Perl 6!");
+
+=end code
+
 =head1 Methods
 
 The L<IO::Socket::Async> cannot be constructed directly, either C<connect>
-or C<listen> should be used to create a client or a server respectively.
+or C<listen> (for TCP connectsions, ) or C<udp> or C<bind-udp> (for UDP
+data,) should be used to create a client or a server respectively.
 
 =head2 method connect
 
@@ -69,6 +94,25 @@ process the client connections.
 To close the underlying listening socket the  L<Supply>
 should be C<close>d.
 
+=head2 method udp
+
+    method udp(IO::Socket::Async:U: :$broadcast ) returns IO::Socket::Async
+
+Returns an initialised C<IO::Socket::Async> client object that is 
+configured to send UDP messages using C<print-to> or C<write-to>.  The
+C<:broadcast> adverb will set the C<SO_BOADCAST> option which will allow
+the socket to send packets to a broadcast address.
+
+=head2 method bind-udp
+
+	method bind-udp(IO::Socket::Async:U: Str() $host, Int() $port, :$broadcast) returns IO::Socket::Async
+
+This returns an initialised C<IO::Socket::Async> server object that is
+configured to receive UDP messages sent to the specified C<$host> and C<$port>
+and is equivalent to C<listen> for a TCP socket.  The C<:broadcast> adverb
+can be specified to allow the receipt of messages sent to the broadcast
+address.
+
 =head2 method print
 
     method print(Str $str) returns Promise
@@ -78,6 +122,17 @@ have been obtained indirectly via C<connect> or C<listen>, returning a
 L<Promise> that will be kept with the number of bytes
 sent or broken if there was an error sending.
 
+=head2 method print-to
+
+    method print-to(IO::Socket::Async:D: Str() $host, Int() $port, Str() $str) returns Promise
+
+This is the equivalent of C<print> for UDP sockets that have been created with
+the C<udp> method, it will try send a UDP message of C<$str> to the specified
+C<$host> and C<$port> returning a L<Promise|/Type/Promise> that will be kept
+when the data is successfully sent or broken if it was unable to send the
+data. In order to send to a broadcast address the C<:broadcast> flag must
+have been specified when the socket was created.
+
 =head2 method write
 
 	method write(Blob $b) returns Promise
@@ -86,6 +141,18 @@ Attempt to send the bytes in C<$b> on the L<IO::Socket::Async> that will
 have been obtained indirectly via C<connect> or C<listen>, returning a
 L<Promise> that will be kept with the number of bytes
 sent or broken if there was an error sending.
+
+=head2 method write-to
+
+    method write-to(IO::Socket::Async:D: Str() $host, Int() $port, Blob $b) returns Promise
+
+This is the equivalent of C<write> for UDP sockets that have been created
+with the C<udp> method, it will try send a UDP message comprised of
+the bytes in the L<Blob|/Types/Blob>  C<$b> to the specified C<$host>
+and C<$port> returning a L<Promise|/Type/Promise> that will be kept
+when the data is successfully sent or broken if it was unable to send
+the data. In order to send to a broadcast address the C<:broadcast>
+flag must have been specified when the socket was created.
 
 =head2 method Supply
 
