--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -21,13 +21,16 @@ files in a namespace.
 
 =head2 Basic Structure
 
-Module distributions in Perl 6 have the same structure as any distribution in
-the Perl family of languages:  there is a main project directory containing
-a C<README> and C<LICENSE> file, a C<lib> directory for modules, a C<t>
-directory for tests, and possibly a C<bin> directory for executable programs
-and scripts.
+Module distributions (in the I<set of related source files> sense) in Perl 6
+have the same structure as any distribution in the Perl family of languages:
+there is a main project directory containing a C<README> and a C<LICENSE> file,
+a C<lib> directory for the source filesE<mdash>which may be individually
+referred to as modules and/or may themselves define modules with the C<module>
+keywordN<As L<synopsis S11|https://design.perl6.org/S11.html#Units> says:
+Confusing? Yes it is.>, a C<t> directory for tests, and possibly a C<bin>
+directory for executable programs and scripts.
 
-Module files generally use the standard C<.pm> extension, and scripts or
+Source files generally use the standard C<.pm> extension, and scripts or
 executables use C<.pl>.  However, if you wish to highlight that the file is
 written in Perl 6 you can use the C<.pm6> extension for modules, and the
 C<.p6> extension for scripts.  Test files still use the normal C<.t>
