Move splice() from List to Array
fixes #254

--- a/Type/Array.pod
+++ b/Type/Array.pod
@@ -164,4 +164,26 @@ Usage:
 Adds the elements from C<LIST> to the front of the array, modifying it
 in-place.
 
+=head2 routine splice
+
+Defined as:
+
+    multi sub    splice(@list,  $start, $elems?, *@replacement) returns Array
+    multi method splice(Array:D $start, $elems?, *@replacement) returns Array
+
+Usage:
+
+    splice(ARRAY, START, ELEMS?, REPLACEMENT?)
+    ARRAY.splice(START, ELEMS?, REPLACEMENT?)
+
+Deletes C<$elems> elements starting from index C<$start> from the C<Array>,
+returns them and replaces them by C<@replacement>. If C<$elems> is omitted,
+all the elements starting from index C<$start> are deleted.
+
+Example:
+
+    my @foo = <a b c d e f g>;
+    say @foo.splice(2, 3, <M N O P>);       # c d e
+    say @foo;                               # a b M N O P f g
+
 =end pod
