--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -327,6 +327,8 @@ To share your module, do the following:
                 `-- Gargravarr.pm
     =end item
 
+    =item If you have any additional files (such as templates or a dynamic library ) that you wish to have installed so you can access them at runtime they should be placed in a C<resources> sub-directory of your project.  
+
     =item The C<README.md> file is a L<markdown-formatted|https://help.github.com/articles/markdown-basics/> text file, which
     will later be automatically rendered as HTML by GitHub.
 
@@ -370,6 +372,7 @@ To share your module, do the following:
             "Vortex::TotalPerspective" : "lib/Vortex/TotalPerspective.pm"
         },
         "depends" : [ ],
+        "resources" : [ ],
         "source-url" : "git://github.com/R<you>/Vortex-TotalPerspective.git"
     }
 
@@ -382,6 +385,12 @@ To share your module, do the following:
     In C<provides> section, include all the namespaces provided by
     your distribution and set C<perl> version to the minimum perl version
     your module works with
+
+    The C<resources> section is optional, but, if present, should contain a
+    list of the files in your C<resources> directory that you wish to be 
+    installed, these will be installed with hashed names alongside your
+    library files and their installed location can be determined through the
+    C<%?RESOURCES> Hash indexed on the name provided.
 
     =end item
 
