Attribute.has-accessor -> has_accessor

--- a/Type/Attribute.pod
+++ b/Type/Attribute.pod
@@ -21,7 +21,7 @@ The usual way to obtain an object of type C<Attribute> is by introspection:
     my $a = Useless.^attributes(:local)[0];
     say $a.name;            # @!things
     say $a.package;         # Useless()
-    say $a.has-accessor;    # False
+    say $a.has_accessor;    # False
 
     # modifying an attribute from the outside
     # this is usually not possible, but since Attribute
@@ -57,15 +57,15 @@ Usage:
 
 Returns the package (class/grammar/role) to which this attribute belongs.
 
-=head2 method has-accessor
+=head2 method has_accessor
 
 Defined as:
 
-    method has-accessor(Attribute:D:) returns Bool:D
+    method has_accessor(Attribute:D:) returns Bool:D
 
 Usage:
 
-    ATTRIBUTE.has-accessor
+    ATTRIBUTE.has_accessor
 
 Returns C<True> if the attribute has a public accessor method.
 
