META.info: author -> authord

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -367,7 +367,7 @@ To share your module, do the following:
         "name" : "Vortex::TotalPerspective",
         "version" : "0.1.0",
         "description" : "Wonderful simulation to get some perspective.",
-        "author" : "R<Your Name>",
+        "authors" : [ "R<Your Name>" ],
         "provides" : {
             "Vortex::TotalPerspective" : "lib/Vortex/TotalPerspective.pm"
         },
@@ -382,7 +382,11 @@ To share your module, do the following:
     details). If the version number doesn't matter to you or your users
     right now, you can just put in an asterisk (*) for the version.
 
-    In C<provides> section, include all the namespaces provided by
+	The C<authors> section includes a list of all the module authors. In
+	the case there is only one author, a single element list must be
+	supplied. 
+
+    In the C<provides> section, include all the namespaces provided by
     your distribution and set C<perl> version to the minimum perl version
     your module works with
 
@@ -391,6 +395,9 @@ To share your module, do the following:
     installed, these will be installed with hashed names alongside your
     library files and their installed location can be determined through the
     C<%?RESOURCES> Hash indexed on the name provided.
+
+	The L<Test::META module | https://github.com/jonathanstowe/Test-META/>
+	can help you check the correctner of the META.info file. 
 
     =end item
 
