Make the example work for more than two instants

--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -133,6 +133,7 @@ In these moments you want an object hash!
   for %intervals.kv.sort(* cmp *) -> (Instant $instant, $note) {
     state $last-instant //= $instant;
     say "We noted '$note' at $instant, with an interval of {$instant - $last-instant}";
+    $last-instant = $instant;
   }
 
 This example uses an object hash that only accepts keys of type L<Instant> to
