--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -174,6 +174,26 @@ The binding is necessary because an object hash is about very solid, specific ob
 which is something that binding is great at keeping track of but about which assignment doesn't
 concern itself much.
 
+=head2 In place editing of values
+
+There may be times when you would like to modify the values of a hash while iterating over them.
+
+    > my %answers = illuminatus => 23, hitchhikers => 42
+    hitchhikers => 42, illuminatus => 23
+    > for %answers.values -> $v { $v += 10 }
+    Cannot assign to a readonly variable or a value
+
+This is traditionally accomplished by sending both the key and the value as follows.
+
+    for %answers.kv -> $k,$v { %answers{$k} = $v + 10 }
+
+However, it is possible to leverage the signature of the block in order to specify that
+you would like read-write access to the values.
+
+    for %answers.values -> $v is rw { $v += 10 }
+
+It is not, however, possible to do in-place editing of hash keys, even in the case of object hashes.
+
 =head1 Methods
 
 =head2 method push
